# AI-for-replace-your-mckinsey-researcher

./: .env.example  .gitignore  README.md  docker-compose.yml  railway.toml  vercel.json
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  main.py
backend/app/api/routes/: exports.py  projects.py
backend/app/api/schemas/: project.py
backend/app/core/prompts/: annual_report.py
backend/app/core/workflows/: annual_report.py  industry_overview.py
backend/app/data/: search.py
backend/app/data/parsers/: pdf.py
backend/app/llm/: validators.py
docs/: adding-workflows.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
infra/docker/: init.sql  nginx.conf  postgres.Dockerfile
