[project]
name = "researchpilot-backend"
version = "0.1.0"
description = "AI-powered McKinsey-style research tool"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Background jobs
    "arq>=0.26.0",
    "redis>=5.2.0",

    # LLM & search
    "anthropic>=0.39.0",
    "exa-py>=1.1.0",
    "voyageai>=0.3.0",

    # Scraping & parsing
    "playwright>=1.49.0",
    "pypdf>=5.1.0",
    "pdfplumber>=0.11.0",
    "trafilatura>=1.12.0",
    "httpx>=0.27.0",

    # Export
    "python-pptx>=1.0.2",
    "jinja2>=3.1.4",

    # Utils
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
